# mcp-rancher

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONVENIENCE_TOOLS_BRAINSTORM.md  IMPLEMENTATION_PLAN.md  MAP.md  Makefile  PERFECT_RANCHER_MCP_IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  SECURITY.md  TASK_STATE.md  TOOL_CATALOG.md  VIBE.yaml  pyproject.toml  server.json
.claude/: settings.json
.claude/agents/: rancher-tool-author.md
.claude/commands/: retrofit.md  scaffold.md
.claude/hooks/: auto-commit.sh  auto-lint.sh  changelog-append.sh  pre-compact.sh  serena-gate.py  serena-required.sh  session-start.sh  stop-gate.sh
.claude/rules/: serena.md
.github/workflows/: release.yml  validate.yml
catalog/: AGENTS.md  capabilities.yaml
catalog/curated_tools/: auth_configs.yml  backups.yml  catalogs.yml  cert_manager_certificates.yml  cert_manager_cluster_issuers.yml  cert_manager_issuers.yml  certificates.yml  cis_scan_profiles.yml  cis_scans.yml  cloud_credentials.yml  cluster_alert_rules.yml  cluster_drivers.yml  cluster_flows.yml  cluster_loggings.yml  cluster_outputs.yml  cluster_policy_reports.yml  cluster_registration_tokens.yml  cluster_role_template_bindings.yml  clusters.yml  configmaps.yml  cron_jobs.yml  daemonsets.yml  deployments.yml  endpoint_slices.yml  etcd_backups.yml  features.yml  fleet_workspaces.yml  flows.yml  global_role_bindings.yml  global_roles.yml  groups.yml  horizontal_pod_autoscalers.yml  ingresses.yml  jobs.yml  limit_ranges.yml  longhorn_backups.yml  longhorn_nodes.yml  longhorn_snapshots.yml  longhorn_volumes.yml  namespaced_certificates.yml  (+33 more)
catalog/curated_tools/_packs/: alerts.yml  apps_catalogs.yml  auth_identity.yml  backup_operator.yml  batch_workloads.yml  cert_manager.yml  certificates.yml  clusters_nodes.yml  compliance.yml  config_secrets.yml  disruption.yml  fleet_registration.yml  governance.yml  logging_backups.yml  logging_pipeline.yml  longhorn.yml  networking.yml  pods_services.yml  policy_reports.yml  projects_namespaces.yml  prometheus_monitoring.yml  provisioning.yml  rbac.yml  scheduling.yml  settings_features.yml  storage.yml  workloads.yml
devtools/: AGENTS.md  __init__.py  architecture_check.py  contract_fixtures.py  devlab.py  mock_rancher.py
devtools/capture_sweep/: __init__.py  __main__.py  cli.py  combos.py  constants.py  crawler.py  enumerator.py  login.py  models.py  naming.py  pool.py  report.py  scan.py
devtools/devlab/: __init__.py  __main__.py  agent.py  cli.py  imported.py  integration.py  kind.py  models.py  process.py  profiles.py  rancher.py  status.py
devtools/manifests/: storage-validation.yaml
docs/: AGENTS.md  capability-catalog.md  codegen-curated-tools.md  codegen-write-tools-cookbook.md  known-gaps.md  live-validation-2026-05-06.md  live-validation-2026-07-21-track-l.md  local-lab.md  rancher-mcp-developer-guide.md  rancher-mcp-tool-inventory.md  rancher-mcp-v1-triage.md  tool-catalog.md  tool-manifest.json  track-m-plan.md
docs/adr/: 0001-production-usability-remediation.md  0002-response-shaping-doctrine.md  README.md  template.md
scripts/: AGENTS.md  bump_version.py  capture_contract_fixtures.py  check_architecture.py  check_server_json.py  check_skills.py  generate_tool_manifest.py  live_probe.py  mcp_probe.py  stamp_skill.py  sync_readme_badges.py  sync_versions.py
scripts/codegen/: __init__.py  check.py  descriptor.py  emitter.py  formatter.py  main.py  plan.py
scripts/codegen/descriptor/: __init__.py  aliases.py  configs.py  loaders.py  models.py  operations.py
scripts/codegen/plan/: __init__.py  helpers.py  module.py  pack.py
scripts/codegen/templates/: pack_init.py.j2  tool_module.py.j2
src/rancher_mcp/: AGENTS.md  __init__.py  __main__.py  _version.py  audit.py  config.py  devlab.py  envelope.py  exceptions.py  logging.py  metrics.py  next_step_targets.py  rate_limit.py  redaction.py  server.py  units.py
src/rancher_mcp/clients/: AGENTS.md  __init__.py  management.py  retry.py  steve.py  streaming.py  streaming_http.py  streaming_transport.py  streaming_websocket.py
src/rancher_mcp/models/: AGENTS.md  alerts.py  backup_operator.py  base.py  batch_workloads.py  cert_manager.py  certificates.py  clusters_nodes.py  compliance.py  config_secrets.py  diagnostics.py  discovery.py  disruption.py  governance.py  logging_pipeline.py  longhorn.py  management.py  monitoring.py  networking.py  pods_services.py  (+10 more)
tests/: AGENTS.md  conftest.py
tests/fixtures/: AGENTS.md
tests/http/: test_management_client.py  test_steve_client.py  test_streaming_client.py
tests/unit/: _backup_operator_support.py  _batch_workloads_support.py  _cert_manager_support.py  _config_secrets_support.py  _devlab_support.py  _disruption_support.py  _governance_support.py  _logging_pipeline_support.py  _longhorn_support.py  _networking_support.py  _next_steps_instance_support.py  _next_steps_registry_support.py  _ops_support.py  _output_schema_dump_parity_support.py  _pods_services_support.py  _policy_reports_support.py  _projects_namespaces_support.py  _prometheus_monitoring_support.py  _resource_mutations_support.py  _scheduling_support.py  _storage_support.py  _workloads_support.py  test_ae10_response_size.py  test_alerts_tools.py  test_apps_catalogs_tools.py  test_architecture_check.py  test_audit.py  test_auth_identity_tools.py  test_backup_operator_backups_read_metadata_tools.py  test_backup_operator_restores_read_metadata_tools.py  test_backup_operator_tools.py  test_bare_json_errors.py  test_batch_workloads_cron_lifecycle_tools.py  test_batch_workloads_cron_metadata_tools.py  test_batch_workloads_delete_tools.py  test_batch_workloads_job_metadata_tools.py  test_batch_workloads_read_tools.py  test_batch_workloads_tools.py  test_capability_schema_load.py  test_capability_unavailable.py  (+178 more)
(+319 files in other folders)
